<resources>
  <string name="app_name">Car Rental Dubai</string>
  <string name="app_title_trip">TRIP</string>
  <string name="app_title_delivery">DELIVERY</string>
  <string name="app_title_pickup">PICKUP</string>
  <string name="app_title_dropoff">DROPOFF</string>
  <string name="app_title_ride">RIDE</string>
  <string name="app_title_invoice">INVOICE</string>
  <string name="app_title_inquiry">INQUIRY</string>
  <string name="app_info">Good Ideas for Bussiness!</string>
  <string name="app_place"></string>
  <string name="app_phone">+97144327836</string>
  <string name="app_policy">By signing up with app\nYou agree to the terms and conditions</string>
  <string name="app_policy_url">http://taxi.autozvit.com/policy.txt</string>
  <string name="service_activated">Service activated</string>
  <string name="service_goto_activity">Goto service activity</string>
  <string name="service_notify">Service notify</string>
  <string name="service_deactivated">Service deactivated</string>
  <string name="order_status_waiting">STATUS WAITING...</string>
  <string name="order_number">Order number: %d</string>
  <string name="order_distance">%.1f km</string>
  <string name="order_duration">%1$d h %2$d min</string>
  <string name="dispatcher_service">Dispatcher service</string>
  <string name="action_settings">Settings</string>
  <string name="GPSAlertDialogMessage">Please ensure location</string>
  <string name="cancel">cancel</string>
  <string name="splash">Splash</string>
  <string name="preferences">Preferences</string>
  <string name="profile">Profile</string>
  <string name="profile_subtitle">Set the user profile data</string>
  <string name="signup">Fast signup</string>
  <string name="messages">Messages</string>
  <string name="settings">Settings</string>
  <string name="settings_subtitle">Set the parameters of the service</string>
  <string name="prepaid">Prepaid</string>
  <string name="social">Social network</string>
  <string name="driver_candidate">Driver candidate</string>
  <string name="call">Call to service</string>
  <string name="history">Orders history</string>
  <string name="exit">Exit</string>
  <string name="stat">Statistic</string>
  <string name="phone">Phone number</string>
  <string name="password">Password</string>
  <string name="callname">Call name (phone)</string>
  <string name="firstname">First name</string>
  <string name="lastname">Last name</string>
  <string name="email">Email</string>
  <string name="transport_name">Car model</string>
  <string name="license_plate">License plate</string>
  <string name="new_message">Message</string>
  <string name="recipient">Recipient</string>
  <string name="orders">My orders</string>
  <string name="order">My order</string>
  <string name="services">Services</string>
  <string name="service">Service</string>
  <string name="products_and_services">Products and services</string>
  <string name="cart_count">IN CART:</string>
  <string name="route_length">ROUTE LENGTH:</string>
  <string name="route_time">ROUTE TIME:</string>
  <string name="route_tip">FOR TRIP ROUTE SELECTION\nYOU CAN CLICKING\nON THE MAP TWICE</string>
  <string name="delivery_tip">FOR A NEW DELIVERY PLACE\nYOU CAN CLICKING\nON THE MAP ONCE</string>
  <string name="driver_tip">FOR CLIENT SELECTION\nYOU CAN CLICK\nFIGURE ON THE MAP</string>
  <string name="riding_tip">PICKUP THE PASSANGER\nGOOD LUCK FOR RIDING!</string>
  <string name="delivering_tip">PICKUP THE PRODUCTS\nDELIVER TO THE PLACE</string>
  <string name="order_trip_accepted_tip">TAXI BOOKED SUCCESS!\nFIND A CAR...</string>
  <string name="order_trip_reminder_tip">YOU HAVE AN ORDER!\nWAITING FOR STATUS...</string>
  <string name="order_trip_processed_tip">YOUR CAR FOR TRIP\nWAITING FOR LANDING...</string>
  <string name="order_trip_transport_tip">YOUR CAR FOR TRIP\n%s\nWAITING FOR LANDING...</string>
  <string name="order_trip_landing_tip">CAR NEAR YOU!\nGOTO THE LANDING!</string>
  <string name="order_trip_delivering_tip">THE TRIP STARTED!</string>
  <string name="order_trip_completed_tip">ORDER HAS BEEN COMPLETED!\nTO ORDER RESTART...</string>
  <string name="order_trip_cancellation_tip">TRIP CANCELLATION...</string>
  <string name="order_trip_canceled_tip">TRIP CANCELED!\nTO ORDER RESTART...</string>
  <string name="order_delivery_accepted_tip">ORDER HAS BEEN ACCEPTED!\nPROCESSING AN ORDER...</string>
  <string name="order_delivery_reminder_tip">YOU HAVE SENT AN ORDER!\nWAITING FOR ACCEPTING...</string>
  <string name="order_delivery_processed_tip">ORDER WAS PROCESSED\nWAITING FOR DELIVERY...</string>
  <string name="order_delivery_transport_tip">TRANSPORT FOR DELIVERY\n%s</string>
  <string name="order_delivery_landing_tip">LOADING OF TRANSPORT...</string>
  <string name="order_delivery_delivering_tip">SHIPPING DELIVERY!</string>
  <string name="order_delivery_completed_tip">ORDER HAS BEEN COMPLETED!\nTO ORDER RESTART...</string>
  <string name="order_delivery_cancellation_tip">DELIVERY CANCELLATION..</string>
  <string name="order_delivery_canceled_tip">DELIVERY CANCELED!\nTO ORDER RESTART...</string>
  <string name="driver_trip_order_accepted_tip">YOU HAVE THE TRIP\nGO FOR THE CIENT...</string>
  <string name="driver_trip_order_processed_tip">DRIVER, YOU TOOK THE ORDER\nGO FOR THE CLIENT...</string>
  <string name="driver_trip_order_landing_tip">WAIT FOR THE CLIENT\nOR CALL HIM</string>
  <string name="driver_trip_order_delivering_tip">THE TRIP STARTED!\nGO TO DESTINATION</string>
  <string name="driver_trip_order_completed_tip">ORDER HAS BEEN COMPLETED!</string>
  <string name="driver_trip_order_cancellation_tip">TRIP CANCELLATION...</string>
  <string name="driver_trip_order_canceled_tip">TRIP CANCELED!</string>
  <string name="driver_delivery_order_accepted_tip">YOU HAVE THE DELIVERING\nGO FOR DELIVERY TAKE...</string>
  <string name="driver_delivery_order_processed_tip">DRIVER, YOU TOOK THE ORDER\nGO FOR DELIVERY TAKE...</string>
  <string name="driver_delivery_order_landing_tip">WAIT FOR THE DELIVERY LOADED</string>
  <string name="driver_delivery_order_delivering_tip">THE DELIVERING STARTED!\nGO TO DESTINATION</string>
  <string name="driver_delivery_order_completed_tip">ORDER HAS BEEN COMPLETED!</string>
  <string name="driver_delivery_order_cancellation_tip">DELIVERING CANCELLATION...</string>
  <string name="driver_delivery_order_canceled_tip">DELIVERY CANCELED!</string>
  <string name="order_find_address">FIND THE ADDRESS\nTO THE TRIP</string>
  <string name="order_delivery_address">ORDER DELIVERY\nADDRESS</string>
  <string name="order_pickup_address">Pickup address</string>
  <string name="order_destination_address">Destination address</string>
  <string name="order_status_changed">Trip order status changed!</string>
  <string name="product_selected">I WANT BOOK!</string>
  <string name="take_order">Do You want to deliver the customer?</string>
  <string name="make_order">Do You want to complete the order?</string>
  <string name="send_order">Do You want to deliver the order to the address?</string>
  <string name="delivery_place">The place of delivery is selected on map</string>
  <string name="cancel_order">Do You want cancel the order?</string>
  <string name="clear_cart">Do You want to clear shopping cart?</string>
  <string name="do_not_show">Do not show tips?</string>
  <string name="start_driver">Do You want to start a driving?</string>
  <string name="stop_driver">Do You want to stop a driving?</string>
  <string name="select_options">Additional booking options</string>
  <string name="update_order_status">Do You want to update order status?</string>
  <string name="payment_for_trip">Payment for the trip</string>
  <string name="estimate_trip">Estimate a Trip on the Transport\n%s</string>
  <string name="transport_reviewed">Trip by Transport reviewed\n%s</string>
  <string name="account_blocked">Your account is blocked!</string>
  <string name="back_to_prev">Back to previous</string>
  <string name="reload_app">Do You want to reload?</string>
  <string name="pay_order">Do You want to pay by order?</string>
  <string name="payment_info">Specify the payment card details\nThe card data is not saved and is not collected</string>
  <string name="payment_amount">Paid\n</string>
  <string name="select_google_play_payment">Do you want to pay for?</string>
  <string name="on_time">On time</string>
  <string name="gps_location">Turn On GPS for location</string>
  <string name="destination">Set destionation on map</string>
  <string name="destination_not_selected">Destination not selected</string>
  <string name="prepaid_amount">Prepaid amount</string>
  <string name="prepaid_card">Enter prepaid code from Your card</string>
  <string name="prepaid_code">Prepaid code</string>
  <string name="password_recovery">Your password has been sent to email</string>
  <string name="phone_number">Need to input phone number</string>
  <string name="social_network">We are in Social Networks</string>
  <string name="prepaid_account">Prepaid Your Account</string>
  <string name="increase_prepaid_account">Prepaid Account increase success</string>
  <string name="call_to_service">Call to service?</string>
  <string name="driver_candidate_info">Driver candidate must to send:\n - Driver License document\n - Driver Insurance\nHigh quality photo image to the email info@calderme.com and wait for response from Us\nFor success You receiving a notification</string>
  <string name="pickup_address">where to get</string>
  <string name="dropoff_address">where to return</string>
  <string name="stat_order">Order</string>
  <string name="stat_order_today">Today</string>
  <string name="stat_order_yesterday">Yesterday</string>
  <string name="stat_order_alltime">All time</string>
  <string name="stat_order_week">Last week</string>
  <string name="stat_order_month">Last month</string>
  <string name="stat_order_count">Count</string>
  <string name="stat_order_completed">Completed</string>
  <string name="stat_order_cancelled">Cancelled</string>
  <string name="stat_order_pending">Pending</string>
  <string name="stat_order_payment">Payment</string>
  <string name="stat_order_total_price">Total price</string>
  <string name="stat_order_purchase_amount">Paid amount</string>
  <string name="stat_order_payment_amount">Card amount</string>
  <string name="stat_driver">Driver</string>
  <string name="stat_service">Service</string>
  <string name="stat_service_messages">Messages</string>
  <string name="stat_service_input">Input</string>
  <string name="stat_service_output">Output</string>
  <string name="stat_service_audit">Audit</string>
  <string name="stat_service_count">Count</string>
  <string name="stat_service_client">Client</string>
  <string name="stat_service_driver">Driver</string>
  <string name="stat_service_transport">Transport</string>
  <string name="stat_service_active_client">Active client</string>
  <string name="stat_service_active_driver">Active driver</string>
  <string name="message_info_title">Information</string>
  <string name="message_warning_title">Warning</string>
  <string name="message_error_title">Error</string>
  <string name="message_success_title">Success</string>
  <string name="message_fatal_error_title">Fatal error</string>
  <string name="message_user_profile_created">User profile created successfully</string>
  <string name="message_user_profile_error">User profile creation failed</string>
  <string name="button_signup">SIGN UP</string>
  <string name="button_demo">TRY DEMO</string>
  <string name="button_book_delivery">BOOK DELIVERY</string>
  <string name="button_incart">IN CART</string>
  <string name="button_find">FIND</string>
  <string name="button_next">NEXT</string>
  <string name="button_back">BACK</string>
  <string name="button_social_network">WE ARE IN SOCIAL NETWORK</string>
  <string name="button_prepaid_code">PREPAID WITH PREPAID CODE</string>
  <string name="button_prepaid_payment">PREPAID WITH PAYMENT CARD</string>
</resources>