<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <!--group android:checkableBehavior="single">
  </group-->
  <group>
    <item
      android:id="@+id/navi_item_99"
      android:title="@string/stat"/>
  </group>

  <item android:title="@string/preferences">
    <menu>
      <item
        android:id="@+id/navi_item_0"
        android:icon="@drawable/people"
        android:title="@string/profile"/>
      <item
        android:id="@+id/navi_item_1"
        android:icon="@drawable/ic_perm_identity_blue_36dp"
        android:title="@string/signup"/>
      <item
        android:id="@+id/navi_item_2"
        android:icon="@drawable/ic_settings_blue_36dp"
        android:title="@string/settings"/>
    </menu>
  </item>

  <group android:id="@+id/nav_group_1" android:checkableBehavior="single">
    <item
      android:id="@+id/navi_item_3"
      android:icon="@drawable/ic_question_answer_blue_36dp"
      android:title="@string/messages"/>
    <item
      android:id="@+id/navi_item_4"
      android:icon="@drawable/cart_grey"
      android:title="@string/prepaid"/>
    <item
      android:id="@+id/navi_item_5"
      android:icon="@drawable/callname_grey"
      android:title="@string/social"/>
    <item
      android:id="@+id/navi_item_6"
      android:icon="@drawable/ic_local_taxi_blue_48dp"
      android:title="@string/driver_candidate"/>
    <item
      android:id="@+id/navi_item_7"
      android:icon="@drawable/ic_settings_phone_blue_36dp"
      android:title="@string/call"/>
    <item
      android:id="@+id/navi_item_8"
      android:icon="@mipmap/ic_menu_black_24dp"
      android:title="@string/history"/>
  </group>

  <group android:id="@+id/nav_group_2" android:checkableBehavior="single">
    <item
      android:id="@+id/navi_item_9"
      android:icon="@drawable/ic_input_blue_36dp"
      android:title="@string/exit"/>
  </group>
</menu>