<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@color/fragment_background"
                android:padding="20dp">

  <TextView
    android:id="@+id/text_view_prepaid_account"
    style="@style/Widget.Style.TipTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:text="@string/prepaid_account"/>

  <Button
    android:id="@+id/button_prepaid_code"
    style="@style/Widget.Style.Button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/button_prepaid_code"
    android:layout_below="@+id/edit_text_prepaid_code"
    android:layout_centerHorizontal="true"/>

  <Button
    android:id="@+id/button_prepaid_payment"
    style="@style/Widget.TransWhiteButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/button_prepaid_code"
    android:layout_alignStart="@+id/button_prepaid_code"
    android:layout_below="@+id/button_prepaid_code"
    android:layout_marginTop="10dp"
    android:text="@string/button_prepaid_payment"/>

  <EditText
    android:id="@+id/edit_text_prepaid_code"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignEnd="@+id/text_view_prepaid_account"
    android:layout_alignLeft="@+id/text_view_prepaid_account"
    android:layout_alignRight="@+id/text_view_prepaid_account"
    android:layout_alignStart="@+id/text_view_prepaid_account"
    android:layout_below="@+id/text_view_prepaid_account"
    android:layout_marginTop="10dp"
    android:ems="10"
    android:hint="@string/prepaid_code"
    android:inputType="numberDecimal"/>

</RelativeLayout>