<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             tools:context="autozvit.com.fireart.forms.SignupFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="horizontal">
  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_list_background">

  <!--banner-->
  <LinearLayout
    android:id="@+id/layout_banner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="vertical">

    <ImageView
      android:id="@+id/image_view_logo"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_gravity="center_horizontal"
      app:srcCompat="@drawable/app_logo"/>
  </LinearLayout>

  <!--signup data-->
  <RelativeLayout
    android:id="@+id/layout_signup_data"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/layout_banner"
    android:layout_marginTop="10dp">

    <ImageView
      android:id="@+id/image_view_phone_picture"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_marginTop="10dp"
      app:srcCompat="@android:drawable/sym_action_call"/>

    <android.support.design.widget.TextInputLayout
      android:id="@+id/input_layout_phone"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_toRightOf="@+id/image_view_phone_picture">

      <EditText
        android:id="@+id/edit_text_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/image_view_phone_picture"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"/>
    </android.support.design.widget.TextInputLayout>

    <ImageView
      android:id="@+id/image_view_password_picture"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/input_layout_phone"
      android:layout_marginTop="10dp"
      app:srcCompat="@android:drawable/ic_lock_lock"/>

    <android.support.design.widget.TextInputLayout
      android:id="@+id/input_layout_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/input_layout_phone"
      android:layout_toRightOf="@+id/image_view_password_picture">

      <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_phone"
        android:layout_toRightOf="@+id/image_view_password_picture"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
      android:id="@+id/button_social_network"
      style="@style/Widget.Style.Button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/input_layout_password"
      android:layout_marginTop="10dp"
      android:layout_centerInParent="true"
      android:onClick="onClick"
      android:text="@string/button_social_network"/>
  </RelativeLayout>

  <!--button-->
  <LinearLayout
    android:id="@+id/layout_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_below="@+id/layout_signup_data"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="10dp">

    <Button
      style="@style/Widget.Style.SignupButton"
      android:id="@+id/button_signup"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/button_signup"
      android:textColor="@color/WhiteSmoke"
      android:textStyle="bold"
      android:onClick="onClick"/>

    <Button
      style="@style/Widget.Style.DemoButton"
      android:id="@+id/button_demo"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/button_demo"
      android:textColor="@color/WhiteSmoke"
      android:onClick="onClick"/>
  </LinearLayout>
  </RelativeLayout>
  </ScrollView>
</FrameLayout>