<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="autozvit.com.fireart.forms.ListFragment">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:orientation="vertical">

      <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fragment_list_background"
        android:scrollbars="horizontal|vertical">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
              android:id="@+id/text_view_list"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:text="LIST"
              android:textSize="42dp"/>

            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:orientation="horizontal">

              <Button
                android:id="@+id/button_next"
                style="@style/Widget.Style.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_next"/>

              <Button
                android:id="@+id/button_back"
                style="@style/Widget.Style.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/button_back"/>
            </LinearLayout>
          </LinearLayout>

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/list"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layoutManager="LinearLayoutManager"/>
          </LinearLayout>
        </LinearLayout>
      </ScrollView>
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="0.01"
      android:orientation="vertical">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/label_background_banner">

      <ImageView
        android:id="@+id/image_view_call_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/callname_grey"/>

      <EditText
        android:id="@+id/edit_text_call_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@+id/image_button_message_send"
        android:layout_toRightOf="@+id/image_view_call_name"
        android:layout_toStartOf="@+id/image_button_message_send"
        android:background="@color/label_background_banner_light"
        android:ems="10"
        android:hint="@string/recipient"
        android:inputType="text"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"/>

      <EditText
        android:id="@+id/edit_text_new_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_call_name"
        android:layout_toEndOf="@+id/image_view_call_name"
        android:layout_toLeftOf="@+id/image_button_message_send"
        android:layout_toRightOf="@+id/image_view_call_name"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/new_message"
        android:inputType="text"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"/>

      <ImageButton
        android:id="@+id/image_button_message_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="false"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:onClick="onClick"
        app:srcCompat="@drawable/send_grey"/>
    </RelativeLayout>
    </LinearLayout>
  </LinearLayout>
</FrameLayout>